packages/concerto-cto/test/cto/bad/aliasImport.bad.alias-missing.cto
namespace test.bad.alias.missing@1.0.0

import ns.{doc as}

